// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyserLocalFile should analyse and render a json file 1`] = `
<div
  className="container"
  data-tid="component-resistance-drugs"
>
  <div
    className="panelContainer"
    data-tid="panel-first-line-drugs"
    style={undefined}
  >
    <div
      className="panelContent"
    >
      <div
        className="panelTitle"
      >
        First line drugs
      </div>
      <div
        className="panelChildrenContainer"
      >
        <div
          className="drugs"
        >
          <div
            data-tid="drug"
          >
            Isoniazid
             
            <div
              className="susceptible"
            >
              Susceptible
            </div>
          </div>
          <div
            data-tid="drug"
          >
            Rifampicin
             
            <div
              className="resistant"
            >
              Resistant
            </div>
          </div>
          <div
            data-tid="drug"
          >
            Ethambutol
             
            <div
              className="resistant"
            >
              Resistant
            </div>
          </div>
          <div
            data-tid="drug"
          >
            Pyrazinamide
             
            <div
              className="susceptible"
            >
              Susceptible
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="panelContainer"
    data-tid="panel-second-line-drugs"
    style={undefined}
  >
    <div
      className="panelContent"
    >
      <div
        className="panelTitle"
      >
        Second line drugs
      </div>
      <div
        className="panelChildrenContainer"
      >
        <div
          className="drugs"
        >
          <div
            data-tid="drug"
          >
            Quinolones
             
            <div
              className="resistant"
            >
              Resistant
            </div>
          </div>
          <div
            data-tid="drug"
          >
            Streptomycin
             
            <div
              className="susceptible"
            >
              Susceptible
            </div>
          </div>
          <div
            data-tid="drug"
          >
            Amikacin
             
            <div
              className="susceptible"
            >
              Susceptible
            </div>
          </div>
          <div
            data-tid="drug"
          >
            Capreomycin
             
            <div
              className="susceptible"
            >
              Susceptible
            </div>
          </div>
          <div
            data-tid="drug"
          >
            Kanamycin
             
            <div
              className="susceptible"
            >
              Susceptible
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnalyserLocalFile should analyse and render a json file 2`] = `
<div
  className="container"
  data-tid="component-resistance-evidence"
>
  <div
    className="panelContainer"
    data-tid="panel-rifampicin"
    style={
      Object {
        "flex": "initial",
        "width": "50%",
      }
    }
  >
    <div
      className="panelContent"
    >
      <div
        className="panelTitle"
      >
        Rifampicin
      </div>
      <div
        className="panelChildrenContainer"
      >
        <div
          className="evidence"
        >
          <div
            data-tid="evidence"
          >
            Resistance mutation found: I491F in gene rpoB
          </div>
          <div
            data-tid="evidence"
          >
            Resistant allele coverage: 78
          </div>
          <div
            data-tid="evidence"
          >
            Susceptible allele coverage: 0
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="panelContainer"
    data-tid="panel-ethambutol"
    style={
      Object {
        "flex": "initial",
        "width": "50%",
      }
    }
  >
    <div
      className="panelContent"
    >
      <div
        className="panelTitle"
      >
        Ethambutol
      </div>
      <div
        className="panelChildrenContainer"
      >
        <div
          className="evidence"
        >
          <div
            data-tid="evidence"
          >
            Resistance mutation found: M306I in gene embB
          </div>
          <div
            data-tid="evidence"
          >
            Resistant allele coverage: 77
          </div>
          <div
            data-tid="evidence"
          >
            Susceptible allele coverage: 0
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="panelContainer"
    data-tid="panel-quinolones"
    style={
      Object {
        "flex": "initial",
        "width": "50%",
      }
    }
  >
    <div
      className="panelContent"
    >
      <div
        className="panelTitle"
      >
        Quinolones
      </div>
      <div
        className="panelChildrenContainer"
      >
        <div
          className="evidence"
        >
          <div
            data-tid="evidence"
          >
            Resistance mutation found: D94G in gene gyrA
          </div>
          <div
            data-tid="evidence"
          >
            Resistant allele coverage: 89
          </div>
          <div
            data-tid="evidence"
          >
            Susceptible allele coverage: 0
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AnalyserLocalFile should analyse and render a json file 3`] = `
<div
  className="container"
  data-tid="component-resistance-profile"
>
  <div
    className="column"
    data-tid="column-susceptible"
  >
    <div
      className="columnTitleSusceptible"
    >
      <i
        className="fa fa-check-circle"
      />
       
      Susceptible
    </div>
    <div
      data-tid="drug"
    >
      Capreomycin
    </div>
    <div
      data-tid="drug"
    >
      Isoniazid
    </div>
    <div
      data-tid="drug"
    >
      Amikacin
    </div>
    <div
      data-tid="drug"
    >
      Pyrazinamide
    </div>
    <div
      data-tid="drug"
    >
      Kanamycin
    </div>
    <div
      data-tid="drug"
    >
      Streptomycin
    </div>
  </div>
  <div
    className="column"
    data-tid="column-resistant"
  >
    <div
      className="columnTitleResistant"
    >
      <i
        className="fa fa-exclamation-triangle"
      />
       
      Resistant
    </div>
    <div
      data-tid="drug"
    >
      Rifampicin
    </div>
    <div
      data-tid="drug"
    >
      Ethambutol
    </div>
    <div
      data-tid="drug"
    >
      Quinolones
    </div>
  </div>
</div>
`;

exports[`AnalyserLocalFile should analyse and render a json file 4`] = `
<div
  className="container"
  data-tid="component-resistance-species"
>
  <div
    className="panelContainer"
    data-tid="panel-species"
    style={
      Object {
        "flex": "initial",
        "width": "100%",
      }
    }
  >
    <div
      className="panelContent"
    >
      <div
        className="panelTitle"
      >
        Species
      </div>
      <div
        className="panelChildrenContainer"
      >
        <div
          className="species"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<em>Mycobacterium tuberculosis</em> (lineage: European American)",
            }
          }
          tid="species"
        />
      </div>
    </div>
  </div>
</div>
`;
